--- a/client/src/components/checkList/checkList.css
+++ b/client/src/components/checkList/checkList.css
@@ -1,5 +1,5 @@
 .checkList{
-    background-color: darkviolet;
+    background-color: rgba(39, 38, 39, 0.97);
     display: none;
     flex-direction: column;
     position: absolute;
@@ -10,6 +10,16 @@
     overflow: scroll;
     overflow-y: auto;
     overflow-x: auto;
+    font-size:20px;
+    letter-spacing:2px;
+    tab-size: 20%;
+    font-family: 'Bebas Neue', cursive;
+    width: 25%;
+    text-shadow: 0 0 1px #0a0a09, 0 0 1px #0f0e0e;
+    color:rgb(251, 251, 51);
+    line-height: 100px;
+    margin-bottom:5px;
+    
 }
 .checkListLabel{
     display: flex;
@@ -17,5 +27,8 @@
     margin: 1px 3px;
 }
 .checkListSpan{
-    margin-left: 3px;
+    margin: 1px 5px;
+    tab-size: 20px;
+    margin-bottom:5px;
+    line-height: 18px;
 }
