--- a/client/src/components/form/form.css
+++ b/client/src/components/form/form.css
@@ -1,28 +1,90 @@
-.divForm{
+.divFormZone{
+    margin-top: 50px;
     display: flex;
-    flex-direction: column;
+
+}
+.Buton4{
+    overflow: visible;
+    display: inline-block;
+    padding: 0.5em;
+    border: 1px solid #e74c3c;
+    margin: 10px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none;
+    background-color: black;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+    border-radius: 0.2em;
+    zoom: 1;
+    *display: inline;
+    color: #e74c3c;
+    font-family:'Arial';
+    text-shadow:black;
+    box-shadow:black;
 }
 .form{
-    display: flex;
-    flex-direction: column;
-    border: deepskyblue 1px solid;
-    align-items: center;
+    display:flex;
+    flex-direction: column;  
+    align-items: left;
+    justify-content: center;
+    width: 60%;
+    letter-spacing: 8px;
+    font-family: 'Bebas Neue', cursive;
+    background-color: rgba(63, 61, 61, 0.4);
+    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
+    font-size: 45px;
+    color:rgb(251, 251, 51);
+    line-height:40px;
+}
+.labelForm{
+    display:flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+}
+.nombre{
+    color:white;
+    font-size:20px;
+    margin-right: 8px;
+    width:40%;
+    text-align: right;
+}
+.formInputs{
+    padding: 0 7px;
+    font-size: 18px;
+    width: 240px;
+    height: 30px;
+    border: none;
+    border-radius: 4px;
+
+}
+.formTextArea{
+    padding: 0 7px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    width: 240px;
+    height: 60px;
+    border: none;
+    border-radius: 4px;
 }
 .checks{
+    color:white;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    width:100%;
 }
 .formFilter{
-    margin-bottom: 5px;
     position: relative;
+    width: auto;
 }
-.formLabel{
+.labelFormButton{
+    margin-right: 40px;
+    color:white;
     font-size: 20px;
-    background-color: darkslategrey;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    
 }
 .formInput{
     display: none;
@@ -30,9 +92,37 @@
 .formCheckImg{
     height: 20px;
 }
+.textFormButton{
+    color:white;
+    margin-left:10px;
+    font-size:26px;  
+    color:#FBFB33;  
+}
 .createdDiv{
     display: none;
 }
 .failedCreate{
     display: none;
 }
+.createFormButton{
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 8px;
+    font-size: 22px;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    background-color: black;
+    color: #e74c3c;
+    border: 2px #e74c3c solid;
+    margin: auto;
+}
+.createFormButton:hover {
+    cursor: url(http://cur.cursors-4u.net/symbols/sym-1/sym46.cur), auto;
+    color: #fff;
+    background-color: #e74c3c;
+}
+
