--- a/client/src/components/genre_Filter/genre_Filter.css
+++ b/client/src/components/genre_Filter/genre_Filter.css
@@ -4,7 +4,6 @@
 }
 .genreLabel{
     font-size: 20px;
-    background-color: darkslategrey;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -16,9 +15,26 @@
 .genreCheckImg{
     height: 20px;
 }
-.genreButton{
-    border: none;
-    font-size: 17px;
-    padding: 2px 4px;
-    border-radius: 3px;
+
+
+.Buton3{
+    overflow: visible;
+    display: inline-block;
+    padding: 0.5em;
+    border: 1px solid #e74c3c;
+    margin: 10px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+    outline: none;
+    background-color: black;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+    border-radius: 0.2em;
+    zoom: 1;
+    *display: inline;
+    color: #e74c3c;
+    font-family:'Arial';
+    text-shadow:black;
+    box-shadow:black;
 }
