--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,34 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Otomanopee+One&display=swap');
+
 .home{
     display: flex;
+    background-image: url("../../img/background.jpg");
 }
 .mainView{
-    background-color:dimgrey ;
+    
+    /* background-color:dimgrey ; */
     width: 75%;
     height: 100vh;
     display: inline-block;
+    position: relative;
 }
 .mainTitle{
-    margin: 10px;
-    font-size: 50px;
-    text-align: center;
+    display: inline-block;
+    color: #bb3e30;
+    width: 5%;
+    height:1%;
+    margin: 0px 0px;
+    padding: 0px;
+    font-size: 100px;
+    text-align: left;
+    -webkit-text-stroke: 1px black;
+    letter-spacing: 5px;
+    border:bold;
+    font-family: 'Bebas Neue', cursive; 
+    
 }
 .pageControl{
-    background-color: dodgerblue;
+    letter-spacing: 8px;
+    font-family: 'Bebas Neue', cursive;
+    background-color: rgba(63, 61, 61, 0.4);
     height: 100vh;
     flex-direction: column;
     width: 25%;
     display: inline-block;
+    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
+    font-size: 45px;
+    color:rgb(251, 251, 51);
+    line-height:40px;
 }
 .search{
-    background-color: goldenrod;
-    height: 20vh;
+    font-size: 50px;
+    height: 15vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: left;
 }
 .filters{
-    background-color: green;
+    margin-bottom: 10px;
     height: 20vh;
     display: flex;
     flex-direction: column;
@@ -37,16 +58,16 @@
 
 }
 .sort{
-    background-color: indigo;
-    height: 30vh;
+    
+    height: 40vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: left;
+    justify-content: center;
 }
 .create{
-    background-color:dodgerblue;
-    height: 20vh;
+    
+    height: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,13 +80,47 @@
     border-radius: 3px;
 }
 .copyright{
-    background-color:orange;
-    height: 10vh;
+    height: 13vh;
 }
 .rightTitles{
     font-size: 30px;
-    margin-bottom: 10px;
+    margin-top:25px;
+    letter-spacing: 8px;
+    font-family: 'Bebas Neue', cursive;
+    background-color: rgba(63, 61, 61, 0.4);
+    flex-direction: column;
+    display: inline-block;
+    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
+    color:rgb(251, 251, 51);
+    line-height:40px;
 }
+
+.rightTitles1{
+    margin-top: 50px;
+    font-size: 30px;
+    letter-spacing: 8px;
+    font-family: 'Bebas Neue', cursive;
+    background-color: rgba(63, 61, 61, 0.4);
+    flex-direction: column;
+    display: inline-block;
+    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
+    color:rgb(251, 251, 51);
+    line-height:40px;
+}
+
+.rightTitles2{
+    margin-top: 100px;
+    font-size: 30px;
+    letter-spacing: 8px;
+    font-family: 'Bebas Neue', cursive;
+    background-color: rgba(63, 61, 61, 0.4);
+    display: inline-block;
+    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
+    color:rgb(251, 251, 51);
+    line-height:40px;
+}
+
+
 .onlyFilters{
     width: 100%;
     display: flex;
