--- a/client/src/components/ratingSort/ratingSort.css
+++ b/client/src/components/ratingSort/ratingSort.css
@@ -1,7 +1,14 @@
 .ratingTitle{
     text-align: center;
-    font-size: 24px;
-    padding: 5px 0;
+    font-size: 25px;
+    letter-spacing: 8px;
+    font-family: 'Bebas Neue', cursive;
+    
+    width: 100%;
+    display: inline-block;
+    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
+    color:rgb(251, 251, 51);
+    line-height:40px;
 }
 .ratingRadios{
     border: none;
