--- a/client/src/components/videoCard/videoCard.css
+++ b/client/src/components/videoCard/videoCard.css
@@ -1,14 +1,63 @@
 .card{
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 10px;
     width: 260px;
-    height: 250px;
+    height: auto;
     box-sizing: border-box;
-    background-color: firebrick;
+    background-color: #17141d;
     position: relative;
+    box-shadow: -1rem 0 3rem #000;
+    border-radius: 10px;
+    opacity: 0.95;
+}
+
+.card:hover{
+    transform: translateY(-3px);
+    transition: 0.4s ease-out;
+    opacity: 1;
+}
+
+.p{
+    font-family: 'Arial';
+    font-size: 15px;
+    margin: 7px 0;
+    color: white;
 }
 .cardImg{
     width: 100%;
+    height: 50%;
+    border-color: gray;
     box-sizing: border-box;
-    
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
+.Button{
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 8px;
+    font-size: 17px;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -o-transition: .3s;
+    display: inline-block;
+    background-color: transparent;
+}
+.Button:hover {
+    cursor: url(http://cur.cursors-4u.net/symbols/sym-1/sym46.cur), auto;
+}
+
+.Button {
+    color: #e74c3c;
+    border: 2px #e74c3c solid;
+}
+
+.Button:hover {
+    color: #fff;
+    background-color: #e74c3c;
+}
+
