--- a/client/src/components/videoCard/videoCard.css
+++ b/client/src/components/videoCard/videoCard.css
@@ -4,13 +4,14 @@
     align-items: center;
     margin: 10px;
     width: 260px;
-    height: auto;
+    height: 370px;
     box-sizing: border-box;
     background-color: #17141d;
     position: relative;
     box-shadow: -1rem 0 3rem #000;
     border-radius: 10px;
     opacity: 0.95;
+    overflow: hidden;
 }
 
 .card:hover{
@@ -19,19 +20,31 @@
     opacity: 1;
 }
 
-.p{
-    font-family: 'Arial';
-    font-size: 15px;
-    margin: 7px 0;
-    color: white;
+.contentCard{
+    align-items: left;
+    width: 100%;
+    height: 35%;
+    overflow: hidden;
 }
 .cardImg{
     width: 100%;
-    height: 50%;
+    height: 45%;
     border-color: gray;
     box-sizing: border-box;
-    border-radius: 10px;
-    margin-bottom: 10px;
+}
+.p{
+    font-size: 17px;
+    margin: 10px;
+    color: white;
+    font-family: 'Bebas Neue', cursive;
+    letter-spacing: 1.7px;
+}
+
+.pGenresContent{
+    display: inline-block;
+}
+.buttonDiv{
+    height: 20%;
 }
 .Button{
     cursor: pointer;
@@ -46,6 +59,8 @@
     -o-transition: .3s;
     display: inline-block;
     background-color: transparent;
+    position: relative;
+    
 }
 .Button:hover {
     cursor: url(http://cur.cursors-4u.net/symbols/sym-1/sym46.cur), auto;
