--- a/client/src/components/alphSort/alphSort.css
+++ b/client/src/components/alphSort/alphSort.css
@@ -1,30 +1,18 @@
 .alphSort{
-    margin-bottom: 20px;
-}
-.alphTitle{
-    font-size: 25px;
-    margin-top:25px;
-    letter-spacing: 8px;
-    font-family: 'Bebas Neue', cursive;
-    flex-direction: column;
-    display: inline-block;
-    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
-    color:rgb(251, 251, 51);
-    line-height:1px;
-
-}
-.alphRadios{
     display: flex;
     flex-direction: column;
-    border: none;
-    text-align: center;
 }
-.aRadio{
-    margin-left: 10px;
+.alphRadios{
+    height: 70px;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 .radioSpan{
     color:white;
-    margin-left:10px;
-    text-shadow:black, 5px;
     font-size:20px;
 }
+
+/* h4Titles esta en App.css */
