--- a/client/src/components/checkList/checkList.css
+++ b/client/src/components/checkList/checkList.css
@@ -4,21 +4,12 @@
     flex-direction: column;
     position: absolute;
     top: 30px;
-    height: auto;
     max-height: 200px;
-    overflow: scroll;
+    overflow:hidden;
     overflow-y: auto;
-    overflow-x: auto;
     font-size:20px;
     letter-spacing:2px;
-    tab-size: 20%;
-    font-family: 'Bebas Neue', cursive;
     width: 25%;
-    text-shadow: 0 0 1px #0a0a09, 0 0 1px #0f0e0e;
-    color:rgb(251, 251, 51);
-    line-height: 100px;
-    margin-bottom:5px;
-    
 }
 .checkListLabel{
     display: flex;
