--- a/client/src/components/details/details.css
+++ b/client/src/components/details/details.css
@@ -2,26 +2,6 @@
     display: flex;
     background-color: rgba(63, 61, 61, 0.4);
 }
-.Buton4{
-    overflow: visible;
-    display: inline-block;
-    padding: 0.5em;
-    border: 1px solid #e74c3c;
-    margin: 10px;
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-    outline: none;
-    background-color: black;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-    border-radius: 0.2em;
-    zoom: 1;
-    color: #e74c3c;
-    font-family:'Arial';
-    text-shadow:black;
-    box-shadow:black;
-}
 .details{
     display: flex;
     flex-direction: column;
@@ -45,7 +25,6 @@
     font-size: 20px;
     margin-left: 10px;
 }
-
 .detailsDescription{
     padding: 6px;
     border-radius: 3px;
@@ -74,3 +53,5 @@
     overflow: hidden;
     overflow-y: auto;
 }
+
+/* Button4 styles in App.css*/
