--- a/client/src/components/form/form.css
+++ b/client/src/components/form/form.css
@@ -1,28 +1,6 @@
 .divFormZone{
     margin-top: 50px;
     display: flex;
-
-}
-.Buton4{
-    overflow: visible;
-    display: inline-block;
-    padding: 0.5em;
-    border: 1px solid #e74c3c;
-    margin: 10px;
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-    outline: none;
-    background-color: black;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-    border-radius: 0.2em;
-    zoom: 1;
-    *display: inline;
-    color: #e74c3c;
-    font-family:'Arial';
-    text-shadow:black;
-    box-shadow:black;
 }
 .form{
     display:flex;
@@ -109,7 +87,7 @@
     margin: 10px;
     border-radius: 5px;
     text-decoration: none;
-    padding: 8px;
+    padding: 4px 6px;;
     font-size: 22px;
     transition: .3s;
     -webkit-transition: .3s;
@@ -117,7 +95,7 @@
     -o-transition: .3s;
     background-color: black;
     color: #e74c3c;
-    border: 2px #e74c3c solid;
+    border: 1px #e74c3c solid;
     margin: auto;
 }
 .createFormButton:hover {
@@ -126,3 +104,4 @@
     background-color: #e74c3c;
 }
 
+/* Button4 styles in App.css*/
