--- a/client/src/components/genre_Filter/genre_Filter.css
+++ b/client/src/components/genre_Filter/genre_Filter.css
@@ -1,5 +1,4 @@
 .genreFilter{
-    margin-bottom: 5px;
     position: relative;
 }
 .genreLabel{
@@ -7,7 +6,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
 .genreInput{
     display: none;
@@ -16,25 +14,4 @@
     height: 20px;
 }
 
-
-.Buton3{
-    overflow: visible;
-    display: inline-block;
-    padding: 0.5em;
-    border: 1px solid #e74c3c;
-    margin: 10px;
-    text-align: center;
-    font-size: 20px;
-    cursor: pointer;
-    outline: none;
-    background-color: black;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-    border-radius: 0.2em;
-    zoom: 1;
-    *display: inline;
-    color: #e74c3c;
-    font-family:'Arial';
-    text-shadow:black;
-    box-shadow:black;
-}
+/* Button3 styles in App.css*/
