--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,12 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Otomanopee+One&display=swap');
-
 .home{
     display: flex;
-    background-image: url("../../img/background.jpg");
+    background-image: url("../../img/bg1.png");
+    background-repeat: repeat;
 }
 .mainView{
-    
-    /* background-color:dimgrey ; */
     width: 75%;
     height: 100vh;
     display: inline-block;
@@ -23,55 +20,51 @@
     text-align: left;
     -webkit-text-stroke: 1px black;
     letter-spacing: 5px;
-    border:bold;
-    font-family: 'Bebas Neue', cursive; 
-    
+    font-family: 'Bebas Neue', 'cursive';
 }
 .pageControl{
-    letter-spacing: 8px;
-    font-family: 'Bebas Neue', cursive;
-    background-color: rgba(63, 61, 61, 0.4);
-    height: 100vh;
-    flex-direction: column;
     width: 25%;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    letter-spacing: 8px;
+    font-family: 'Bebas Neue', 'cursive';
+    background-color: rgba(63, 61, 61, 0.4);
     text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
-    font-size: 45px;
     color:rgb(251, 251, 51);
-    line-height:40px;
 }
 .search{
+    background-color: rgba(113, 88, 226, 0.05);
+    height: 150px;
     font-size: 50px;
-    height: 15vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: left;
+    justify-content: space-evenly;
 }
 .filters{
-    margin-bottom: 10px;
-    height: 20vh;
+    height: 165px;
+    background-color: rgba(23, 192, 235, 0.05);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: left;
-
+    justify-content: space-around;
 }
 .sort{
-    
-    height: 40vh;
+    height: 300px;
+    background-color: rgba(113, 88, 226, 0.05);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 .create{
-    
-    height: 10vh;
+    height: 90px;
+    background-color: rgba(23, 192, 235, 0.05);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: left;
+    justify-content: space-around;
 }
 .homeButton{
     border: none;
@@ -79,51 +72,16 @@
     padding: 2px 4px;
     border-radius: 3px;
 }
-.copyright{
-    height: 13vh;
-}
-.rightTitles{
-    font-size: 30px;
-    margin-top:25px;
-    letter-spacing: 8px;
-    font-family: 'Bebas Neue', cursive;
-    background-color: rgba(63, 61, 61, 0.4);
-    flex-direction: column;
-    display: inline-block;
-    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
-    color:rgb(251, 251, 51);
-    line-height:40px;
-}
-
-.rightTitles1{
-    margin-top: 50px;
-    font-size: 30px;
-    letter-spacing: 8px;
-    font-family: 'Bebas Neue', cursive;
-    background-color: rgba(63, 61, 61, 0.4);
-    flex-direction: column;
-    display: inline-block;
-    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
-    color:rgb(251, 251, 51);
-    line-height:40px;
-}
-
-.rightTitles2{
-    margin-top: 100px;
-    font-size: 30px;
-    letter-spacing: 8px;
-    font-family: 'Bebas Neue', cursive;
-    background-color: rgba(63, 61, 61, 0.4);
-    display: inline-block;
-    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
-    color:rgb(251, 251, 51);
-    line-height:40px;
-}
-
-
 .onlyFilters{
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
+.onlyRadios{
+    height: 230px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+/* Button3 styles in App.css*/
