--- a/client/src/components/ratingSort/ratingSort.css
+++ b/client/src/components/ratingSort/ratingSort.css
@@ -1,19 +1,13 @@
-.ratingTitle{
-    text-align: center;
-    font-size: 25px;
-    letter-spacing: 8px;
-    font-family: 'Bebas Neue', cursive;
-    
-    width: 100%;
-    display: inline-block;
-    text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
-    color:rgb(251, 251, 51);
-    line-height:40px;
+.ratingSort{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .ratingRadios{
+    height: 70px;
     border: none;
-    text-align: center;
-}
-.rRadio{
-    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
