--- a/client/src/components/videoCard/videoCard.css
+++ b/client/src/components/videoCard/videoCard.css
@@ -8,18 +8,16 @@
     box-sizing: border-box;
     background-color: #17141d;
     position: relative;
-    box-shadow: -1rem 0 3rem #000;
+    box-shadow: 0rem 0 3rem #000;
     border-radius: 10px;
     opacity: 0.95;
     overflow: hidden;
 }
-
 .card:hover{
     transform: translateY(-3px);
     transition: 0.4s ease-out;
     opacity: 1;
 }
-
 .contentCard{
     align-items: left;
     width: 100%;
@@ -39,7 +37,6 @@
     font-family: 'Bebas Neue', cursive;
     letter-spacing: 1.7px;
 }
-
 .pGenresContent{
     display: inline-block;
 }
@@ -51,28 +48,20 @@
     margin: 10px;
     border-radius: 5px;
     text-decoration: none;
-    padding: 8px;
+    padding: 4px 6px;
     font-size: 17px;
-    transition: .3s;
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    -o-transition: .3s;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -o-transition: 0.3s;
     display: inline-block;
     background-color: transparent;
     position: relative;
-    
+    color: #e74c3c;
+    border: 1px #e74c3c solid;
 }
 .Button:hover {
     cursor: url(http://cur.cursors-4u.net/symbols/sym-1/sym46.cur), auto;
-}
-
-.Button {
-    color: #e74c3c;
-    border: 2px #e74c3c solid;
-}
-
-.Button:hover {
     color: #fff;
     background-color: #e74c3c;
 }
-
