--- a/client/src/components/view/view.css
+++ b/client/src/components/view/view.css
@@ -1,6 +1,7 @@
 .cardsZone{
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 .pagination{
     width: 29%;
@@ -10,27 +11,23 @@
     right: -18px;
     text-align: center;
 }
-
-/* boton general no olvidarse */
+/* botones de paginación */
 .Button2{
     position: relative;
     overflow: visible;
     display: inline-block;
-    padding: 0.5em 1em;
+    padding: 4px 6px;
     border: 1px solid #e74c3c;
+    border-radius: 0.2em;
     margin: 10px;
-    text-align: center;
-    font-size:20px;
     cursor: pointer;
     outline: none;
     background-color: black;
     -moz-background-clip: padding;
     background-clip: padding-box;
-    border-radius: 0.2em;
     zoom: 1;
-    *display: inline;
     color: #e74c3c;
     font-family:'Arial';
-    text-shadow:black;
-    box-shadow:black;
+    font-size:20px;
+    text-align: center;
 }
