--- a/client/src/components/alphSort/alphSort.css
+++ b/client/src/components/alphSort/alphSort.css
@@ -1,6 +1,7 @@
 .alphSort{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .alphRadios{
     height: 70px;
@@ -10,6 +11,14 @@
     align-items: center;
     justify-content: space-around;
 }
+.aRadio{
+    width: 110px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+/* esta configuración es para ambos radio buttons, incluye los de valoración */
 .radioSpan{
     color:white;
     font-size:20px;
