--- a/client/src/components/details/details.css
+++ b/client/src/components/details/details.css
@@ -1,6 +1,8 @@
 .generalDetails{
     display: flex;
     background-color: rgba(63, 61, 61, 0.4);
+    opacity: 1;
+    transition: all 0.8s ease-in-out;
 }
 .details{
     display: flex;
