--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,28 +1,29 @@
 .home{
+    height: auto;
     display: flex;
     background-image: url("../../img/bg1.png");
-    background-repeat: repeat;
+    position: relative;
+    min-height: 100vh;
 }
 .mainView{
     width: 75%;
-    height: 100vh;
     display: inline-block;
     position: relative;
+    transition: all 0.5s ease-in-out;
 }
 .mainTitle{
+    padding: 0 7vw;
     display: inline-block;
     color: #bb3e30;
-    width: 5%;
-    height:1%;
-    margin: 0px 0px;
-    padding: 0px;
     font-size: 100px;
-    text-align: left;
     -webkit-text-stroke: 1px black;
     letter-spacing: 5px;
     font-family: 'Bebas Neue', 'cursive';
 }
 .pageControl{
+    height: 100vh;
+    position: fixed;
+    right: 0;
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -32,6 +33,7 @@
     background-color: rgba(63, 61, 61, 0.4);
     text-shadow: 0 0 4px #0a0a09, 0 0 4px #0f0e0e;
     color:rgb(251, 251, 51);
+    transition: all 0.5s ease-in-out;
 }
 .search{
     background-color: rgba(113, 88, 226, 0.05);
@@ -84,4 +86,4 @@
     flex-direction: column;
     justify-content: space-around;
 }
-/* Button3 styles in App.css*/
+/* Button3 styles in App.css */
